test/fail_compilation/fail38.d

int x;

void test(){
	super.x = 2;
}

int main(){
	test();
	return 0;
}

